# Practice-

./: autopush.sh
LAB2/: TASK2  TASK2.cpp  TASK3.cpp  TASK4  TASK4.cpp  TASK5  TASK5.cpp  TASK6  TASK6.cpp  task1  task1.cpp
LAB4/: TASK1  TASK1.cpp  TASK2  TASK2.cpp  TASK3  TASK3.cpp  TASK4  TASK4.cpp
LAB6/: TASK1  TASK1.cpp  TASK2  TASK2.cpp  TASK3  TASK3.cpp
LABI/: LAB1  task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
QtApp/: CMakeLists.txt  main.cpp
QtLoginApp/: CMakeLists.txt
QtLoginApp/src/: main.cpp
QtLoginApp/ui/: login.ui
tutorials/: 1  calculator.cpp  cgpa  cgpa.cpp
tutorials/votingsystem/backend/votingsystem/: db.sqlite3  votes.txt
tutorials/votingsystem/backend/votingsystem/vote/: urls.py  views.py
tutorials/votingsystem/backend/votingsystem/votingsystem/: settings.py  urls.py
tutorials/votingsystem/cpp/: vote  vote.cpp  votes.txt
tutorials/votingsystem/frontend/: index.html
